# playground

./: .gitignore  Makefile  README.md  pyproject.toml  tasks.py
go/: README.md  go.mod
python/python3.10/: README.md  pyproject.toml  tasks.py
python/python3.11/: README.md  pyproject.toml  tasks.py
rust/: Makefile.toml  README.md
template/go/: README.md  go.mod
template/python/python3.10/: README.md  pyproject.toml
template/python/python3.11/: pyproject.toml  tasks.py
