[tool.poetry]
name = "python3-10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
invoke = "^1.7.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
include_trailing_comma = true
line_length = 110
multi_line_output = 3
