[tool.poetry]
name = "python3-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
invoke = "^1.7.3"
isort = "^5.10.1"
mypy = "^0.991"
types-invoke = "1.7.3.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
include_trailing_comma = true
line_length = 110
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
