[tool.poetry]
name = "python3-10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
invoke = "^2.2.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
types-invoke = "2.0.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
include_trailing_comma = true
line_length = 110
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
