[tool.poetry]
name = "python3-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
invoke = "^2.2.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pyproject-flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
types-invoke = "2.0.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
max-line-length = 120
ignore = "E203,E231,E266,E501,W503"
select = "B,C,E,F,W,T4,B9"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
